--- a/cs511HwSolutions/hw05/latex/nicholas_ikechukwu.hw05.tex
+++ b/cs511HwSolutions/hw05/latex/nicholas_ikechukwu.hw05.tex
@@ -147,14 +147,13 @@ This contradiction shows that our assumption in step 1 must be false. Therefore,
 \end{proof}
 
 \newpage
-\section*{PPROBLEM 1: Let $\psi1, \psi2, and \psi3$ be the three axioms of group theory, which are written as
+\section*{PROBLEM 1: Let $\psi1, \psi2, and \psi3$ be the three axioms of group theory, which are written as
 first-order wff’s on page 11 of Lecture Slides 20. Let $\psi$ be the wff in the middle of the same page
 11 of Lecture Slides 20. The wff $\psi$ expresses the uniqueness of inverses in groups. Your task is to
 produce a formal proof, as a natural deduction, of the following judgment:
 $\psi1, \psi2, \psi3 \vdash \psi$.}
 
-\subsection*{
-Hint: Do Exercises 1 and 2 above before this problem. Also use $\approx$ for the formal symbol whose
+\subsection*{Hint: Do Exercises 1 and 2 above before this problem. Also use $\approx$ for the formal symbol whose
 interpretation is equality, leaving = for equality at the meta-level.
 }
 
