--- a/cs511HwSolutions/hw05/latex/nicholas_ikechukwu.hw05.tex
+++ b/cs511HwSolutions/hw05/latex/nicholas_ikechukwu.hw05.tex
@@ -29,7 +29,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{Page \thepage}
-\lhead{Nicholas  Ikechukwu - U71641768}
+\lhead{Nicholas  Ikechukwu - U71641768 - Boston University}
 \cfoot{}
 
 \begin{document}
