--- a/cs511HwSolutions/hw06/latex/nicholas_ikechukwu.hw06.tex
+++ b/cs511HwSolutions/hw06/latex/nicholas_ikechukwu.hw06.tex
@@ -23,6 +23,8 @@
   pdfpagemode=FullScreen,
 }
 
+% Add the new command here
+\newcommand{\defeq}{\stackrel{\text{def}}{=}}
 \newcommand{\proves}{\vdash}
 
 
@@ -49,145 +51,136 @@
 
 
 
-\section*{Exercise 1. [LCS, page 160]: Exercise 2.3.1, do parts (a) and (b) only }
+\section*{Exercise 1. Lecture Slides 22, FO Definability, Appendix. Ex. 3 on pg2. }
+
+\subsection*{Hint: Carefully use the hint, as well as the special case given in lecture on Thursday, October 10.
+Use $\approx$, instead of =, for the formal symbol whose interpretation is equality. In LaTeX, you can typeset
+$\approx$ with \ approx.}
+
 \begin{mdframed}
-    Prove the validity of the following sequents using, among others, the rules =i
-    and =e. Make sure that you indicate for each application of =e what the rule
-    instances $\phi$, $t_1$ and $t_2$ are.
-    
-    Use $\approx$, instead of =, for the formal symbol whose interpretation is equality. In LaTeX, you can typeset
-    with ${"approx"}$
-     
-    
-    \begin{enumerate}[label=(\alph*)]
-    \item $(y = 0) \land (y = x) \vdash 0 = x$
-    \item $t_1 = t_2 \vdash (t + t_2) = (t + t_1)$
-    \end{enumerate}
+    Every finite subset X $\subseteq$ N is first-order definable in the structure ($\mathbb{N}; <$).
 \end{mdframed}
 
-\section*{Solutions:}
+\section*{Solutions to Ex.3 : First-Order Definability}
+Ex.3. Every finite subset $X \subseteq \mathbb{N}$ is first-order definable in the structure $\mathbb{N}; <$. We can use the first-order definable constant 0 and the successor function.
 
-\section*{(a) $(y \approx 0) \wedge (y \approx x) \vdash 0 \approx x$}
+% Define the WFF for the subset X
+Let $\phi_{\{0\}}(x)$ define the constant 0 as:
+$$
+\phi_{\{0\}}(x) \defeq \forall y (x \approx y \lor x < y)
+$$
 
-\begin{proof}
-\begin{enumerate}
-    \item $(y \approx 0) \wedge (y \approx x)$ \hfill [Premise]
-    \item $y \approx 0$ \hfill [$\wedge$ elimination, 1]
-    \item $y \approx x$ \hfill [$\wedge$ elimination, 1]
-    \item $0 \approx y$ \hfill [=e: $\varphi(z) := (z \approx y)$, $t_1 := y$, $t_2 := 0$, from 2]
-    \item $0 \approx x$ \hfill [=e: $\varphi(z) := (0 \approx z)$, $t_1 := y$, $t_2 := x$, from 4, 3]
-\end{enumerate}
-\end{proof}
+
+% Define the successor function
+Let $\phi_{\text{succ}}(x, y)$ define the successor function:
+$$
+\phi_{\text{succ}}(x, y) \defeq (x < y) \land \forall z (x < z \rightarrow (y \approx z \lor y < z)) \land \forall z (z < y \rightarrow (z \approx x \lor z < x))
+$$
+
+
+% Define the WFF for the finite subset
+A finite subset $X = \{ a_1, a_2, \ldots, a_n \}$ can be defined as follows:
+$$
+\phi_X(x) \defeq \bigvee_{i=1}^{n} \phi_{\text{succ}}^{i-1}(0, x)
+$$
+
+where $\phi_{\text{succ}}^{i-1}(0, x)$ denotes applying the successor function $(i-1)$ times starting from 0.
+
+
+
 
 \newpage
 
+\section*{Exercise 2. Lecture Slides 22, FO Definability, Appendix. Ex 10 on page 3.}
 
-\section*{(b) $t_1 \approx t_2 \vdash (t + t_2) \approx (t + t_1)$}
+\subsection*{Hint 1 : Review how we showed, in lecture on Thursday October 10, that the unary predicate prime
+was first-order definable in in structure ($\mathbb{N}$; =, <, +, ·, S, 0). See pages 15-16 in Lecture Slides 21
+where prime is called pr}
 
-\begin{proof}
-\begin{enumerate}
-    \item $t_1 \approx t_2$ \hfill [Premise]
-    \item $(t + t_1) \approx (t + t_1)$ \hfill [=i]
-    \item $(t + t_2) \approx (t + t_1)$ \hfill [=e: $\varphi(z) := ((t + z) \approx (t + t_1))$, $t_1 := t_1$, $t_2 := t_2$, from 1, 2]
-\end{enumerate}
-\end{proof}
+\subsection*{Hint 2 : You case use any of the preceding exercises in Lecture Slides 22, FO Definability,
+Appendix as “lemmas” without proving them again, i.e., use the statements of the exercises as
+premises that you do not need to prove.}
 
-
-
-\newpage
-
-\section*{Exercise 2. LCS, page 161: Exercise 2.3.9, do parts (a) and (d) only.}
 \begin{mdframed}
-    Prove the validity of the following sequents in predicate logic, where F , G, P ,
-    and Q have arity 1, and S has arity 0 (a ‘propositional atom’):
-
-    \begin{itemize}
-        \item (a) $\exists x (S \rightarrow Q(x)) \vdash S \rightarrow \exists x Q(x)$
-        \item (d) $\forall x P(x) \rightarrow S \vdash \exists x (P(x) \rightarrow S)$
-    \end{itemize}
-
+    Show that the predicate $\text{prime} : \mathbb{N} \to \{\text{true}, \text{false}\}$ is first-order definable in the structure $(\mathbb{N}; |, +, 0)$.
 \end{mdframed}
 
-\section*{Solutions:}
-
-
-\section*{(a) $\exists x(S \to Q(x)) \vdash S \to \exists xQ(x)$}
-
-Let $\mathcal{I}$ be any interpretation in which $\exists x(S \to Q(x))$ is true.
+\section*{Solution to Ex. 10}
 
 \begin{proof}
-    \item There exists some element $a$ in the domain such that $S \to Q(a)$ is true in $\mathcal{I}$. \hfill
-    \item To prove $S \to \exists xQ(x)$, consider two cases for $S$: \hfill
-    \item Case 1: If $S$ is false in $\mathcal{I}$, then $S \to \exists xQ(x)$ is trivially true. \hfill
-    \item Case 2: If $S$ is true in $\mathcal{I}$, then: \hfill
-    \begin{enumerate}
-        \item $Q(a)$ must be true in $\mathcal{I}$ (from steps 1 and 4). \hfill
-        \item Therefore, $\exists xQ(x)$ is true in $\mathcal{I}$. \hfill
-        \item Hence, $S \to \exists xQ(x)$ is true in $\mathcal{I}$. \hfill
-    \end{enumerate}
-    \item In both cases, $S \to \exists xQ(x)$ is true in $\mathcal{I}$. \hfill
-Thus, whenever $\exists x(S \to Q(x))$ is true in an interpretation, $S \to \exists xQ(x)$ is also true in that interpretation, proving the validity of the sequent. \hfill
+    \item We define the predicate $\text{prime}(x)$ using the following first-order formula:
+    
+    \[\phi_{\text{prime}}(x) \defeq \neg(x \approx 1) \wedge \forall y \forall z [(y|x \wedge z|x) \to (y \approx 1 \vee z \approx 1 \vee y \approx x \vee z \approx x)]\]
+    
+    \item This formula uses only the divisibility relation $|$ and equality $\approx$. We need to show that the other components can be defined using $\{|, +, 0\}$:
+    
+    \item $x \approx 1$ can be defined as $\phi_1(x) \defeq \forall y (y|x)$
+    
+    \item $x \approx 0$ can be defined as $\phi_0(x) \defeq \forall y (x|y)$
+    
+    \item Using these, we can rewrite $\phi_{\text{prime}}(x)$ as:
+    
+    \[\phi_{\text{prime}}(x) \defeq \neg\phi_1(x) \wedge \forall y \forall z [(y|x \wedge z|x) \to (\phi_1(y) \vee \phi_1(z) \vee y \approx x \vee z \approx x)]\]
+    
+  
 \end{proof}
 
-\newpage
-\section*{(d) $\forall xP(x) \to S \vdash \exists x(P(x) \to S)$}
-    We prove this by contradiction:
 
-\begin{proof}
-    \item Assume there exists an interpretation $\mathcal{I}$ in which $\forall xP(x) \to S$ is true but $\exists x(P(x) \to S)$ is false. \hfill
-    \item In $\mathcal{I}$, $\forall x\neg(P(x) \to S)$ must be true (negation of $\exists x(P(x) \to S)$). \hfill
-    \item This means for every element $a$ in the domain of $\mathcal{I}$: \hfill
-    \begin{enumerate}
-        \item $P(a)$ is true and $S$ is false. \hfill
-    \end{enumerate}
-    \item Therefore, $\forall xP(x)$ is true in $\mathcal{I}$. \hfill
-    \item From steps 1 and 4, $S$ must be true in $\mathcal{I}$ (by modus ponens). \hfill
-    \item But this contradicts step 3(a), where $S$ is false. \hfill
-This contradiction shows that our assumption in step 1 must be false. Therefore, in any interpretation where $\forall xP(x) \to S$ is true, $\exists x(P(x) \to S)$ must also be true, proving the validity of the sequent. \hfill
-\end{proof}
 
 \newpage
-\section*{PROBLEM 1: Let $\psi1, \psi2, and \psi3$ be the three axioms of group theory, which are written as
-first-order wff’s on page 11 of Lecture Slides 20. Let $\psi$ be the wff in the middle of the same page
-11 of Lecture Slides 20. The wff $\psi$ expresses the uniqueness of inverses in groups. Your task is to
-produce a formal proof, as a natural deduction, of the following judgment:
-$\psi1, \psi2, \psi3 \vdash \psi$.}
+\section*{PROBLEM 1 Open EML.Chapter 4.pdf. Do part 2 and part 3 in Exercise 71 on page 46.}
 
-\subsection*{Hint: Do Exercises 1 and 2 above before this problem. Also use $\approx$ for the formal symbol whose
-interpretation is equality, leaving = for equality at the meta-level.
+\subsection*{Hint: You will have to do a fair amount of reading in the same chapter before doing this problem, in
+particular, you should carefully study the material in Example 70 right before Exercise 71. However,
+by the time you have finished your reading, your answers will be relatively easy to write.
 }
 
 
-\section*{Solution:}
-Let $\psi_1$, $\psi_2$, and $\psi_3$ be the three axioms of group theory:
+\section*{Solution to Ex. 2:}
+We can prove that if every finite subgraph of $G$ is $k$-colorable, then $G$ is $k$-colorable, using the Compactness Theorem for ZOL.
+\begin{proof}
+    
+    
+    \item Let $\Gamma = \Theta_1 \cup \Theta_2 \cup \Theta_3 \cup \Phi_1 \cup \Phi_2 \cup \Phi_3$ as defined in the background.
+    
+    \item Consider any finite subset $\Gamma_0 \subseteq \Gamma$. This $\Gamma_0$ only mentions a finite number of vertices of $G$.
+    
+    \item Let $G_0$ be the finite subgraph of $G$ induced by these vertices.
+    
+    \item By our assumption, $G_0$ is $k$-colorable.
+    
+    \item This $k$-coloring of $G_0$ can be extended to a model $M_0$ of $\Gamma_0$.
+    
+    \item Therefore, every finite subset of $\Gamma$ is satisfiable.
+    
+    \item By the Compactness Theorem for ZOL (Theorem 65), $\Gamma$ itself is satisfiable.
+    
+    \item Let $M$ be a model of $\Gamma$. By the Basic Herbrand Theorem (Theorem 58), we can assume $M$ is a Herbrand model.
+    
+    \item The reduct $M_0 = (M, R^M)$ contains an isomorphic copy of $G$ (by the Claim in the background).
+    
+    \item The interpretation of $C_1, \ldots, C_k$ in $M$ gives a valid $k$-coloring of this copy of $G$.
+    
+    \item Therefore, $G$ is $k$-colorable.
+    \end{proof}
 
-\begin{enumerate}
-    \item $\forall x (e \cdot x \approx x \wedge x \cdot e \approx x)$ (identity)
-    \item $\forall x \exists y (x \cdot y \approx e \wedge y \cdot x \approx e)$ (inverse)
-    \item $\forall x \forall y \forall z ((x \cdot y) \cdot z \approx x \cdot (y \cdot z))$ (associative)
-\end{enumerate}
+\newpage
 
-Let $\phi$ be the wff expressing the uniqueness of inverses in groups:
-
-\[\phi \equiv \forall x \forall y \forall z (x \cdot y \approx e \wedge x \cdot z \approx e \to y \approx z)\]
-
-We need to prove: $\psi_1, \psi_2, \psi_3 \proves \phi$
-Let $x$, $y$, and $z$ be arbitrary elements of the group.
+\section*{Solution to Ex. 3:}
+    Let $G = (N, E)$ be a planar graph. We will prove that $G$ is 4-colorable.
 
 \begin{proof}
-
-    \item Assume $x \cdot y \approx e$ and $x \cdot z \approx e$.
-    \item From $\psi_2$, there exists an element $x'$ such that $x \cdot x' \approx e$ and $x' \cdot x \approx e$.
-    \item By substituting $e$ into the equation, we have $(x \cdot y) \cdot x' \approx e$.
-    \item By the identity axiom ($\psi_1$), $(x \cdot y) \cdot x' = x'$.
-    \item By the associative property ($\psi_3$), we have $x \cdot (y \cdot x') = x'$.
-    \item Therefore, since $e = y$, we can conclude that $y = x'$.
-    \item Similarly, we can show that $z = x'$.
-    \item Thus, we conclude that $y = z$.
-
-\end{proof}
-Since $x$, $y$, and $z$ were arbitrary, we have proven $\phi$.
-
+    
+    \item Every finite subgraph of $G$ is planar (as planarity is a hereditary property).
+    
+    \item By the Four Color Theorem, every finite planar graph is 4-colorable.
+    
+    \item Therefore, every finite subgraph of $G$ is 4-colorable.
+    
+    \item By the result from Exercise 2, since every finite subgraph of $G$ is 4-colorable, $G$ itself is 4-colorable.
+    
+    
+    \end{proof}
 
 \newpage
 
@@ -203,21 +196,19 @@ Since $x$, $y$, and $z$ were arbitrary, we have proven $\phi$.
 
 \newpage
 
-\section*{Exercise 3. Hint: These should be easy if you read the book. Use existential quantifiers.}
+\section*{Exercise 3. From Macbeth's book}
 \section*{Solution}
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw06/hw06_nicholas_ikechukwu.lean}
 
 \newpage
 
-\section*{Exercise 4. Hint: These use existential and universal quantifiers. The existential quantifiers are used in both
-context and goal, but universal quantifiers only in context.}
+\section*{Exercise 4. From Macbeth's book}
 
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw06/hw06_nicholas_ikechukwu.lean}
 
 \newpage
 
-\section*{PROBLEM 2. Prove in Lean 4 the judgment for which you produced a formal proof as a natural
-deduction in Problem 1 above.}
+\section*{PROBLEM 2. From Macbeth's book}
 \section*{Solution}
 
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw06/hw06_nicholas_ikechukwu.lean}
