--- a/cs511HwSolutions/hw09/latex/nicholas_ikechukwu.hw09.tex
+++ b/cs511HwSolutions/hw09/latex/nicholas_ikechukwu.hw09.tex
@@ -8,7 +8,7 @@
 
 
 
-% Define a custom-proof environment
+% \defeqine a custom-proof environment
 
 \newenvironment{proof}
 {\begin{mdframed}[linewidth=0.5pt]\begin{enumerate}[label=\arabic*.,leftmargin=*]}
@@ -52,331 +52,129 @@
 
 
 
-\section*{Exercise 1. [LCS, page 159-160]: Exercise 2.2.3. Do both part (a), on page 159, and part (b),
-on page 160. }
-
-\section*{Analysis of First-Order Formulas}
-
-\section*{Part (a): Valid and Invalid Formulas in Predicate Logic}
-
-Given: $m$ is a constant, $f$ is a function symbol with one argument, and $S$ and $B$ are two predicate symbols, each with two arguments.
-
-\subsection*{Valid Formulas with Parse Trees}
-
-\textbf{i.} $S(m, x)$ is a valid formula:
-
-\vspace{1em}
-\Tree [.$\bullet$
-    [.$S$ ]
-    [.$\circ$ $m$ ]
-    [.$\circ$ $x$ ]
-]
-
-\textbf{ii.} $B(m, f(m))$ is a valid formula:
-
-\vspace{1em}
-\Tree [.$\bullet$
-    [.$B$ ]
-    [.$\circ$ $m$ ]
-    [.$\bullet$
-        [.$f$ ]
-        [.$\circ$ $m$ ]
-    ]
-]
-
-\textbf{vi.} $(B(x, y) \rightarrow (\exists z S(z,y)))$ is a valid formula:
-
-
-\Tree [.$\bullet$
-    [.$\rightarrow$
-        [.$\bullet$
-            [.$B$ ]
-            [.$\circ$ $x$ ]
-            [.$\circ$ $y$ ]
-        ]
-        [.$\bullet$
-            [.$\exists z$ ]
-            [.$\bullet$
-                [.$S$ ]
-                [.$\circ$ $z$ ]
-                [.$\circ$ $y$ ]
-            ]
-        ]
-    ]
-]
-
-\textbf{vii.} $(S(x, y) \rightarrow S(y, f(f(x))))$ is a valid formula:
-
-\vspace{1em}
-\Tree [.$\bullet$
-    [.$\rightarrow$
-        [.$\bullet$
-            [.$S$ ]
-            [.$\circ$ $x$ ]
-            [.$\circ$ $y$ ]
-        ]
-        [.$\bullet$
-            [.$S$ ]
-            [.$\circ$ $y$ ]
-            [.$\bullet$
-                [.$f$ ]
-                [.$\bullet$
-                    [.$f$ ]
-                    [.$\circ$ $x$ ]
-                ]
-            ]
-        ]
-    ]
-]
-
-\subsection*{Invalid Formulas with Reasons}
-
-\textbf{iii.} $f(m)$ is not a formula because:
-\begin{itemize}
-    \item It is a term, not a formula
-    \item No predicate symbol is applied
-\end{itemize}
-
-\textbf{iv.} $B(B(m, x), y)$ is not a formula because:
-\begin{itemize}
-    \item $B$ is a predicate symbol, not a function symbol
-    \item Cannot use predicate $B$ as argument to another predicate
-\end{itemize}
-
-\textbf{v.} $S(B(m), z)$ is not a formula because:
-\begin{itemize}
-    \item $B(m)$ is invalid as $B$ requires two arguments
-    \item Cannot use predicate as argument
-\end{itemize}
-
-\textbf{viii.} $(B(x) \rightarrow B(B(x)))$ is not a formula because:
-\begin{itemize}
-    \item $B$ requires two arguments but given only one
-    \item Cannot use predicate $B$ as argument
-\end{itemize}
-
-
-\newpage
-
-
-\section*{Part (b)}
-
-Let $c$ and $d$ be constants, $f$ a function symbol with one argument, $g$ a function symbol with two arguments, $h$ a function symbol with three arguments, and $P$ and $Q$ are predicate symbols with three arguments.
-
-\subsection*{Valid Formulas with Parse Trees}
-
-\textbf{i.} $\forall x P(f(d), h(g(c, x), d, y))$ is a valid formula:
-
-\vspace{1em}
-
-\Tree [.$\bullet$
-    [.$\forall x$ ]
-    [.$P$
-        [.$\bullet$
-            [.$f$
-                [.$\circ$ $d$ ]
-            ]
-        ]
-        [.$\bullet$
-            [.$h$
-                [.$\bullet$
-                    [.$g$
-                        [.$\circ$ $c$ ]
-                        [.$\circ$ $x$ ]
-                    ]
-                ]
-                [.$\circ$ $d$ ]
-                [.$\circ$ $y$ ]
-            ]
-        ]
-    ]
-]
-
-\vspace{1em}
-
-\textbf{iii.} $\forall x Q(g(h(x, f(d), x), g(x, x)), h(x, x, x), c)$ is a valid formula:
-
-\Tree [.$\bullet$
-    [.$\forall x$ ]
-    [.$Q$
-        [.$\bullet$
-            [.$g$
-                [.$\bullet$
-                    [.$h$
-                        [.$\circ$ $x$ ]
-                        [.$\bullet$
-                            [.$f$
-                                [.$\circ$ $d$ ]
-                            ]
-                        ]
-                        [.$\circ$ $x$ ]
-                    ]
-                ]
-                [.$\bullet$
-                    [.$g$
-                        [.$\circ$ $x$ ]
-                        [.$\circ$ $x$ ]
-                    ]
-                ]
-            ]
-        ]
-        [.$\bullet$
-            [.$h$
-                [.$\circ$ $x$ ]
-                [.$\circ$ $x$ ]
-                [.$\circ$ $x$ ]
-            ]
-        ]
-        [.$\circ$ $c$ ]
-    ]
-]
-
-\vspace{1em}
-
-\textbf{vi.} $Q(c, d, c)$ is a valid formula:
-
-\vspace{1em}
-
-\Tree [.$\bullet$
-    [.$Q$ ]
-    [.$\circ$ $c$ ]
-    [.$\circ$ $d$ ]
-    [.$\circ$ $c$ ]
-]
-
-\subsection*{Invalid Formulas with Reasons}
-
-\textbf{ii.} $\forall x P(f(d), h(P(x, y), d, y))$ is not a formula because:
-\begin{itemize}
-    \item Cannot use predicate $P$ as argument to function $h$
-    \item Predicates can only appear as atomic formulas
-\end{itemize}
-
-\textbf{iv.} $\exists z (Q(z, z, z) \rightarrow P(z))$ is not a formula because:
-\begin{itemize}
-    \item $P$ requires three arguments but given only one
-    \item Arity mismatch for predicate $P$
-\end{itemize}
-
-\textbf{v.} $\forall x \forall y (g(x, y) \rightarrow P(x, y, x))$ is not a formula because:
-\begin{itemize}
-    \item $g(x, y)$ is a term, not a formula
-    \item Cannot use $\rightarrow$ with a term on left side
-    \item Only atomic formulas can be connected by logical operators
-\end{itemize}
-
-\newpage
-\section*{Exercise 2.}
-
-
-\section*{Part 1: [LCS, page 160]: Exercise 2.3.2. }
-
-
-
-\section*{2.3.2. Formula Interpretation}
-
-The formula $\exists x \exists y (\neg(x = y) \land (\forall z ((z = x) \lor (z = y))))$ specifies:
-
-\vspace{1em}
-"There exist x and y, such that there is no x that equals y and for all z, z either equals x or y".
-
-\vspace{1em}
-in essense:
-
-\vspace{1em}
-"There exist exactly two distinct elements in the model."
-
-\vspace{1em}
-This is because:
-\begin{itemize}
-    \item $\exists x \exists y (\neg(x = y))$ states there are at least two different elements
-    \item $\forall z ((z = x) \lor (z = y))$ states every element must be equal to either $x$ or $y$
-    \item Together, they specify that there are exactly two distinct elements
-\end{itemize}
-
-\newpage
-
-
-\section*{Part 2: [LCS, page 160]: Exercise 2.3.3, modified as follows. Change part (c) to read “at least three
-distinct elements”.}
-\section*{2.3.3. Predicate Logic Sentences}
-
-\subsection*{(a) Exactly three distinct elements:}
-\[\begin{aligned}
-& \exists x \exists y \exists z (\neg(x = y) \land \neg(y = z) \land \neg(x = z) \land \\
-& \forall w ((w = x) \lor (w = y) \lor (w = z)))
-\end{aligned}\]
-
-\subsection*{(b) At most three distinct elements:}
-\[\forall x \forall y \forall w \forall z ((w = x) \lor (w = y) \lor (w = z))\]
-
-\subsection*{(c) At least three distinct elements:}
-\[\exists x \exists y \exists z (\neg(x = y) \land \neg(y = z) \land \neg(x = z))\]
-
-\textbf{Explanations:}
-\begin{itemize}
-    \item For "exactly three": We state there exist three distinct elements AND every element must be one of these three
-    \item For "at most three": We state that any fourth element must be equal to one of three elements
-    \item For "at least three": We state there exist three elements that are all different from each other
-\end{itemize}
-
-\vspace{1em}
-
-
-\vspace{1em}
-
-\newpage
-
-\section*{PROBLEM 1 Open EML.Chapter 6.pdf. Do part Exercise 99 on page 61.}
-
-\section*{Interpretation of PL in FOL, II (Solution)}
-
-Let $\Sigma' \defeq \{f, g_1, g_2, g_3, c_1, c_2\}$ where:
-\begin{itemize}
-    \item $f$ corresponds to $\neg$ (unary)
-    \item $g_1$ corresponds to $\land$ (binary)
-    \item $g_2$ corresponds to $\lor$ (binary)
-    \item $g_3$ corresponds to $\to$ (binary)
-    \item $c_1$ corresponds to $\bot$ (constant)
-    \item $c_2$ corresponds to $\top$ (constant)
-\end{itemize}
-
-To define the two-element structure up to isomorphism, we construct $\psi$ as follows:
-
-\[\begin{aligned}
-\psi \defeq & \hspace{1em} \exists x \exists y (\neg(x \approx y) \land \forall z(z \approx x \lor z \approx y)) \land \\
-& \forall x \forall y ( \\
-& \quad (x \approx c_1 \lor x \approx c_2) \land \\
-& \quad \neg(c_1 \approx c_2) \land \\
-& \quad (f(c_1) \approx c_2 \land f(c_2) \approx c_1) \land \\
-& \quad (g_1(c_1, c_1) \approx c_1 \land g_1(c_1, c_2) \approx c_1 \land \\
-& \quad g_1(c_2, c_1) \approx c_1 \land g_1(c_2, c_2) \approx c_2) \land \\
-& \quad (g_2(c_1, c_1) \approx c_1 \land g_2(c_1, c_2) \approx c_2 \land \\
-& \quad g_2(c_2, c_1) \approx c_2 \land g_2(c_2, c_2) \approx c_2) \land \\
-& \quad (g_3(c_1, c_1) \approx c_2 \land g_3(c_1, c_2) \approx c_2 \land \\
-& \quad g_3(c_2, c_1) \approx c_1 \land g_3(c_2, c_2) \approx c_2))
-\end{aligned}\]
-
-For any propositional formula $\phi$, we construct $\phi'$ as:
-\[\phi' \defeq \phi \land \psi\]
-
-\textbf{Proof of Correctness:}
-\begin{itemize}
-    \item The sentence $\psi$ ensures:
+\section*{Exercise 1. Open EML.Chapter 6.pdf: Do Exercise 107 on page 64. }
+
+
+\begin{mdframed}
+    Exercise 107: (Two-Colorability of Graphs: First-Order Deﬁnable). The notion of two-colorable
+    simple graphs coincides with the notion of bipartite simple graphs. Write an inﬁnite set $\Gamma_{bipartite}$
+    of ﬁrst-order sentences such that, for every simple graph G, it holds that G $\models$ $\Gamma_{bipartite}$ iﬀ G is
+    bipartite.
+
+    \vspace{1em} 
+    Hint: G is bipartite iﬀ every cycle in G (possibly with repeated vertices) has even length. 
+\end{mdframed}
+\section*{Solution:}
+Let $\Gamma_{\text{bipartite}}$ be the set of first-order sentences that express that for every cycle of length $n$ (where $n$ is odd), such a cycle cannot exist in the graph. For each odd $n \geq 3$, we include a sentence $\phi_n$ in $\Gamma_{\text{bipartite}}$:
+    
+    \[
+    \phi_n := \forall x_1 \ldots \forall x_n \left(\bigwedge_{i=1}^{n-1} E(x_i,x_{i+1}) \land E(x_n,x_1) \rightarrow \bigvee_{1 \leq i < j \leq n} x_i \approx x_j\right)
+    \]
+    
+    Then:
+    \[
+    \Gamma_{\text{bipartite}} := \{\phi_n \mid n \geq 3 \text{ and } n \text{ is odd}\}
+    \]
+    
+    This works because:
+\begin{proof}
+    
     \begin{itemize}
-        \item Exactly two distinct elements ($c_1$ and $c_2$ representing false and true)
-        \item The truth tables for negation ($f$), conjunction ($g_1$), disjunction ($g_2$), and implication ($g_3$)
-        \item The constants false ($c_1$) and true ($c_2$)
+        \item Each $\phi_n$ says "there cannot be a cycle of length $n$" where $n$ is odd
+        \item The formula enforces that if we have $n$ vertices connected in a cycle, at least two must be the same vertex
+        \item A graph models $\Gamma_{\text{bipartite}}$ if and only if it has no odd cycles
+        \item By the characterization of bipartite graphs, a graph is bipartite if and only if it has no odd cycles
     \end{itemize}
-    \item If $\phi$ is valid in PL, then it evaluates to true under all truth assignments
-    \item The sentence $\psi$ ensures that any model of $\phi'$ is isomorphic to the two-element Boolean algebra
-    \item Therefore, $\phi$ is valid in PL if and only if $\phi'$ is valid in FOL
-\end{itemize}
+    
+    Therefore, $G \models \Gamma_{\text{bipartite}}$ if and only if $G$ is bipartite.
+\end{proof}
+
 
 \newpage
 
 
 
+\section*{Exercise 2. [LCS, page 163]: Do Exercise 2.4.6 (the last on that page).}
+
+\begin{mdframed}
+    Consider the three sentences:
+    
+    \vspace{1em}
+    $\phi1 \defeq \forall x P (x, x)$
+    
+    \vspace{1em}
+    $\phi2 \defeq \forall x \forall y (P (x, y) \implies P (y, x))$
+    
+    \vspace{1em}
+    $\phi3 \defeq \forall x \forall y \forall z ((P (x, y) \land P (y, z) \implies P (x, z)))$
+    
+    \vspace{1em}
+
+    which express that the binary predicate P is reﬂexive, symmetric and transitive,
+    respectively. Show that none of these sentences is semantically entailed by the
+    other ones by choosing for each pair of sentences above a model which satisﬁes
+    these two, but not the third sentence – essentially, you are asked to ﬁnd three
+    binary relations, each satisfying just two of these properties. 
+  
+\end{mdframed}
+
+\subsection*{Solution:}
+We can show that none of these sentences semantically entails the others, by first finding three different models:
+    
+\vspace{1em}
+1. A model satisfying $\phi_2$ and $\phi_3$ but not $\phi_1$ (symmetric and transitive but not reflexive)
+
+2. A model satisfying $\phi_1$ and $\phi_3$ but not $\phi_2$ (reflexive and transitive but not symmetric)
+
+3. A model satisfying $\phi_1$ and $\phi_2$ but not $\phi_3$ (reflexive and symmetric but not transitive)
+
+
+\vspace{1em}
+Now, we'll construct these models using simple binary relations on small sets:
+    
+\vspace{1em}
+
+\textbf{Model 1:} (symmetric and transitive but not reflexive)
+\begin{itemize}
+    \item Domain: $A = \{1, 2\}$
+    \item Relation: $P = \emptyset$ (empty relation)
+    \item This is symmetric (vacuously) and transitive (vacuously) but not reflexive since $P(1,1)$ and $P(2,2)$ don't hold   ß
+\end{itemize}
+
+    
+\textbf{Model 2:} (reflexive and transitive but not symmetric)
+
+\begin{itemize}
+\item Domain: $A = \{1, 2\}$
+    \item Relation: $P = \{(1,1), (2,2), (1,2)\}$
+    \item This is reflexive (all $(x,x)$ included) and transitive, but not symmetric since $(1,2)$ is in $P$ but $(2,1)$ is not
+\end{itemize}
+
+\textbf{Model 3:} (reflexive and symmetric but not transitive)
+\begin{itemize}
+    \item Domain: $A = \{1, 2, 3\}$
+    \item Relation: $P = \{(1,1), (2,2), (3,3), (1,2), (2,1)\}$
+    \item This is reflexive (all $(x,x)$ included) and symmetric, but not transitive since $(1,2)$ and $(2,3)$ are in $P$ but $(1,3)$ is not
+\end{itemize}
+    
+
+Therefore, it is clear that each sentence is independent of the others.
+\newpage
+
+\section*{PROBLEM 1  Open Lecture Slides 26: Do the two parts of the exercise on page 7.}
+
+\section*{Part 1:}
+
+
+
+\newpage
+
+
+\section*{Part 2:}
+
+
+
+\newpage
 
 
 
@@ -387,7 +185,7 @@ For any propositional formula $\phi$, we construct $\phi'$ as:
 
 \newpage
 
-\section*{Exercise 3. Two closely related parts, which you have to do in Lean:}
+\section*{Exercise 3. From Macbeth’s book:}
 \section*{Solutions}
 \url{https://github.com/nich-ikech/CS511-hw-macbeth/blob/main/cs511HwSolutions/hw09/hw09_nicholas_ikechukwu.lean}
 
